--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -60,7 +60,7 @@ steps:
   - aha test tests/rom
   - aha test tests/conv_1_2
   - aha test tests/conv_2_1
-  We report success to the aha-flow app by removing the .TEMP file,
+  # We report success to the aha-flow app by removing the .TEMP file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
   - rm -rf /buildkite/.TEMP
