--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -64,9 +64,7 @@ steps:
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
   - echo "--- Removing Failure Canary"
-  - ls -al /buildkite
-  - rm -rf /buildkite/.TEMP
-  - ls -al /buildkite
+  - rm -rf /buildkite/.TEST
   plugins:
     - docker#v3.2.0:
         image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
