--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -50,21 +50,23 @@ steps:
   - aha map tests/conv_1_2 --width $$WIDTH --height $$HEIGHT
   - aha map tests/conv_2_1 --width $$WIDTH --height $$HEIGHT
   - echo "--- Running Test"
-  - aha test tests/ushift
-  - aha test tests/arith
-  - aha test tests/absolute
+  # - aha test tests/ushift
+  # - aha test tests/arith
+  # - aha test tests/absolute
   - aha test apps/pointwise
-  - aha test tests/scomp
-  - aha test tests/ucomp
-  - aha test tests/uminmax
-  - aha test tests/rom
-  - aha test tests/conv_1_2
-  - aha test tests/conv_2_1
+  # - aha test tests/scomp
+  # - aha test tests/ucomp
+  # - aha test tests/uminmax
+  # - aha test tests/rom
+  # - aha test tests/conv_1_2
+  # - aha test tests/conv_2_1
   # We report success to the aha-flow app by removing the .TEMP file,
   # which is created in the post-checkout hook and checked for in the
   # pre-exit hook.
   - echo "--- Removing Failure Canary"
+  - ls -al /buildkite
   - rm -rf /buildkite/.TEST
+  - ls -al /buildkite
   plugins:
     - docker#v3.2.0:
         image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
