--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -25,6 +25,7 @@ steps:
   - module load base incisive
   - ls /aha
   - pip freeze
+  - (cd garnet && echo "garnet" && git rev-parse --verify HEAD)
   # Run regression tests
   - if [[ $$FLOW_REPO ]]; then
       export CONFIG=pr;
