--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 [submodule "coreir-apps"]
     path = coreir-apps
     url = https://github.com/rdaly525/coreir
-    branch = rm-ubuf-master
+    branch = dev
 [submodule "tapeout"]
     path = tapeout
     url = https://github.com/stanfordaha/garnet
