--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -6,9 +6,17 @@ on:
       - master
     paths-ignore:
       - '**.md'
+      - '.buildkite/**'
+      - '.dependabot/**'
+      - 'docs/**'
   pull_request:
     branches:
       - master
+    paths-ignore:
+      - '**.md'
+      - '.buildkite/**'
+      - '.dependabot/**'
+      - 'docs/**'
   schedule:
     - cron: '0 11 * * *'
 
