--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -25,7 +25,7 @@ steps:
   commands:
   - source /aha/bin/activate
   - source /cad/modules/tcl/init/sh
-  - module load base incisive
+  - module load base incisive xcelium
   - ls /aha
   - pip freeze
   - (cd garnet && echo "garnet" && git rev-parse --verify HEAD)
