--- a/.gitmodules
+++ b/.gitmodules
@@ -53,7 +53,7 @@
 [submodule "lassen"]
     path = lassen
     url = https://github.com/stanfordaha/lassen
-    branch = seq2
+    branch = master
 [submodule "peak"]
     path = peak
     url = https://github.com/cdonovick/peak
