--- a/.gitmodules
+++ b/.gitmodules
@@ -74,7 +74,7 @@
     branch = master
 [submodule "mflowgen"]
 	path = mflowgen
-	url = https://github.com/cornell-brg/mflowgen
+	url = https://github.com/mflowgen/mflowgen.git
 [submodule "clockwork"]
 	path = clockwork
 	url = https://github.com/dillonhuff/clockwork.git
