Added peak_gen as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "MetaMapper"]
 	path = MetaMapper
 	url = https://github.com/rdaly525/MetaMapper
+[submodule "peak_generator"]
+	path = peak_generator
+	url = https://github.com/jack-melchert/peak_generator
