Renaming metamapper and peak_gen folders

--- a/.gitmodules
+++ b/.gitmodules
@@ -83,9 +83,9 @@
 [submodule "rdai"]
 	path = rdai
 	url = https://github.com/thenextged/rdai.git
-[submodule "peak_gen"]
-	path = peak_gen
-	url = https://github.com/jack-melchert/peak_generator.git
-[submodule "metamapper"]
-	path = metamapper
+[submodule "MetaMapper"]
+	path = MetaMapper
 	url = https://github.com/rdaly525/MetaMapper
+[submodule "peak_generator"]
+	path = peak_generator
+	url = https://github.com/jack-melchert/peak_generator
