--- a/.gitmodules
+++ b/.gitmodules
@@ -89,3 +89,6 @@
 [submodule "peak_generator"]
 	path = peak_generator
 	url = https://github.com/jack-melchert/peak_generator
+[submodule "sam"]
+	path = sam
+	url = ./sam
