Updated elgohr/Publish-Docker-Github-Action to a supported version (v5)

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         submodules: recursive
     - name: Publish Docker image
-      uses: elgohr/Publish-Docker-Github-Action@2.12
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: stanfordaha/garnet
         username: ${{ secrets.DOCKER_USERNAME }}
