--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -61,8 +61,8 @@ steps:
   agents:
     docker: true
 
-- label: ":hammer: Integration Tests"
-  key: "integration-tests"
+- label: ":hammer: RTL gold (amber)"
+  key: "goldcheck-amber"
   depends_on: "docker-build"
   commands:
   - /aha/aha/bin/rtl-goldcheck.sh amber
@@ -82,8 +82,11 @@ steps:
     docker: true
 
 
+# FIXME does docker image get removed even when dependence(s) fail?
 - label: ":skull_and_crossbones: Delete Docker Image"
-  depends_on: "integration-tests"
+  depends_on:
+  - "integration-tests"
+  - "goldcheck-amber"
   commands:
   # '--no-prune' so it doesn't prune dangling images, we want to use
   # them for the Docker cache.
