--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -19,6 +19,27 @@ steps:
   agents:
     docker: true
   
+- label: ":hammer: RTL Gold (Amber)"
+  key: "goldcheck-amber"
+  depends_on: "docker-build"
+  commands:
+  - /aha/aha/bin/rtl-goldcheck.sh amber
+  plugins:
+    - docker#v3.2.0:
+        image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
+        volumes:
+          - "/cad/:/cad"
+          - "./temp:/buildkite:rw"
+        mount-checkout: false
+        propagate-environment: true
+        environment:
+          - CONFIG
+          - FLOW_REPO
+        shell: ["/bin/bash", "-e", "-c"]
+  agents:
+    docker: true
+
+
 - label: ":hammer: Integration Tests"
   key: "integration-tests"
   depends_on: "docker-build"
@@ -60,27 +81,6 @@ steps:
         shell: ["/bin/bash", "-e", "-c"]
   agents:
     docker: true
-
-- label: ":hammer: RTL gold (amber)"
-  key: "goldcheck-amber"
-  depends_on: "docker-build"
-  commands:
-  - /aha/aha/bin/rtl-goldcheck.sh amber
-  plugins:
-    - docker#v3.2.0:
-        image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
-        volumes:
-          - "/cad/:/cad"
-          - "./temp:/buildkite:rw"
-        mount-checkout: false
-        propagate-environment: true
-        environment:
-          - CONFIG
-          - FLOW_REPO
-        shell: ["/bin/bash", "-e", "-c"]
-  agents:
-    docker: true
-
 
 # FIXME does docker image get removed even when dependence(s) fail?
 - label: ":skull_and_crossbones: Delete Docker Image"
