--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -19,7 +19,7 @@ steps:
   agents:
     docker: true
   
-- label: ":hammer: RTL Gold (Amber)"
+- label: ":hammer: Amber Gold RTL"
   key: "goldcheck-amber"
   depends_on: "docker-build"
   commands:
@@ -40,7 +40,7 @@ steps:
     docker: true
 
 
-- label: ":hammer: Integration Tests"
+- label: ":hammer: Onyx Integration Tests"
   key: "integration-tests"
   depends_on: "docker-build"
   commands:
