--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -19,7 +19,28 @@ steps:
   agents:
     docker: true
   
-- label: ":hammer: Integration Tests"
+- label: ":hammer: Amber Gold RTL"
+  key: "goldcheck-amber"
+  depends_on: "docker-build"
+  commands:
+  - /aha/aha/bin/rtl-goldcheck.sh amber
+  plugins:
+    - docker#v3.2.0:
+        image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
+        volumes:
+          - "/cad/:/cad"
+          - "./temp:/buildkite:rw"
+        mount-checkout: false
+        propagate-environment: true
+        environment:
+          - CONFIG
+          - FLOW_REPO
+        shell: ["/bin/bash", "-e", "-c"]
+  agents:
+    docker: true
+
+
+- label: ":hammer: Onyx Integration Tests"
   key: "integration-tests"
   depends_on: "docker-build"
   commands:
@@ -61,8 +82,11 @@ steps:
   agents:
     docker: true
 
+# FIXME does docker image get removed even when dependence(s) fail?
 - label: ":skull_and_crossbones: Delete Docker Image"
-  depends_on: "integration-tests"
+  depends_on:
+  - "integration-tests"
+  - "goldcheck-amber"
   commands:
   # '--no-prune' so it doesn't prune dangling images, we want to use
   # them for the Docker cache.
