--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -11,12 +11,12 @@ steps:
   key: "docker-build"
   commands:
 
-  - echo "--- pipeilne.xml commands BEGIN"
+  - echo "--- pipeline.xml commands BEGIN"
 
   # The "if FLOW_REPO" part is redundant when/if not using heroku...
   # - source $$CHECKOUT
   # - source $$CHECKOUT;if [[ $$FLOW_REPO ]]; then (
-  - env
+  # - env
   - echo FLOW_REPO=$$FLOW_REPO
   - echo FLOW_REPO=$FLOW_REPO
   - 'set -x;
@@ -24,7 +24,7 @@ steps:
      if test -e tmp-vars; then
        cat -n tmp-vars;
        source tmp-vars;
-     fi
+     fi;
      if [[ $$FLOW_REPO ]]; then
        echo "--- Handle PR";
        cd $FLOW_REPO && git fetch && git checkout $FLOW_HEAD_SHA;
@@ -48,7 +48,7 @@ steps:
   - echo "--- Pruning Docker Images"
   - yes | docker image prune -a --filter "until=6h" --filter=label='description=garnet' || true
 
-  - echo "--- pipeilne.xml commands END"
+  - echo "--- pipeline.xml commands END"
 
 
   agents:
@@ -72,8 +72,8 @@ steps:
         # set -x; source .buildkite/hooks/post-checkout
 
 # What? no!
-      pre-command: |
-        set -x; pwd; if test -e tmp-vars; then source tmp-vars; fi
+#       pre-command: |
+#         set -x; pwd; if test -e tmp-vars; then source tmp-vars; fi
 
       pre-exit: |
         pwd
