--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -66,7 +66,10 @@ steps:
 #       precommand: $${BUILDKITE_DOWNLOADS_PATH}/custom-checkout.sh
   - improbable-eng/metahook:
 
-      # pre-checkout is a BAD IDEA maybe
+      # This should run as pre-checkout, else risk not executing post-checkout hook from repo
+      # If run as pre-checkout, still get local post-checkout hook
+      # If run as post-checkout, local (repo) post-checkout hook DOES NOT HAPPEN! :(
+      # FIXME maybe should not rely on repo hook for post-echkout, pre-exit!
       # "Preparing working directory" might clear out aha-flow maybe??
       pre-checkout: |
         echo "Is /tmp reliable? And/or should curl from url?"
