quick fail i hope

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -136,34 +136,38 @@ steps:
   key: "integration-tests"
   depends_on: "docker-build"
   commands:
-  # Disabled checkout so maybe .buildkite/hooks/post-checkout not guaranteed to exist
-  # So must embed finctionality here instead :/
-  - mkdir -p /buildkite/temp; rm -rf /buildkite/temp/.TEST; touch /buildkite/temp/.TEST
+
+#   # Disabled checkout so maybe .buildkite/hooks/post-checkout not guaranteed to exist
+#   # So must embed finctionality here instead :/
+#   - mkdir -p /buildkite/temp; rm -rf /buildkite/temp/.TEST; touch /buildkite/temp/.TEST
   
-  # - docker images; docker ps; sleep 500; exit 0
-  - source /aha/bin/activate
-  - source /cad/modules/tcl/init/sh
-  - module load base incisive xcelium/19.03.003 vcs/Q-2020.03-SP2
-  # make /bin/sh symlink to bash instead of dash:
-  - echo "dash dash/sh boolean false" | debconf-set-selections
-  - DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
-  - apt update
-  - apt install time
-  - ls /aha
-  - pip freeze
-  - (cd garnet && echo "garnet" && git rev-parse --verify HEAD)
-  # Run regression tests
-  - if [[ $$FLOW_REPO ]]; then
-      export CONFIG=pr;
-    fi
-  - aha regress $$CONFIG
-  # We report success to the aha-flow app by removing the .TEST file,
-  # which is created in the post-checkout hook and checked for in the
-  # pre-exit hook.
+#   # - docker images; docker ps; sleep 500; exit 0
+#   - source /aha/bin/activate
+#   - source /cad/modules/tcl/init/sh
+#   - module load base incisive xcelium/19.03.003 vcs/Q-2020.03-SP2
+#   # make /bin/sh symlink to bash instead of dash:
+#   - echo "dash dash/sh boolean false" | debconf-set-selections
+#   - DEBIAN_FRONTEND=noninteractive dpkg-reconfigure dash
+#   - apt update
+#   - apt install time
+#   - ls /aha
+#   - pip freeze
+#   - (cd garnet && echo "garnet" && git rev-parse --verify HEAD)
+#   # Run regression tests
+#   - if [[ $$FLOW_REPO ]]; then
+#       export CONFIG=pr;
+#     fi
+#   - aha regress $$CONFIG
+#   # We report success to the aha-flow app by removing the .TEST file,
+#   # which is created in the post-checkout hook and checked for in the
+#   # pre-exit hook.
+
   - echo "--- Removing Failure Canary"
   - ls -al /buildkite
   - rm -rf /buildkite/.TEST
   - ls -al /buildkite
+
+  - pwd
 
 # need to run post-checkout and pre-exit hooks even though did not checkout aha repo
   plugins:
@@ -177,6 +181,7 @@ steps:
           ls -l $$aha/.buildkite/hooks/post-checkout || echo no
           echo "+++ DEBUG DOCKER TRASH"
           docker images; docker ps
+          docker kill deleteme_garnet_ci3927
 
 #     - matrix-org/download#v1.1.0:
 #         urls:
