--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,13 +6,31 @@ env:
   CHECKOUT: /tmp/aha-flow-$$BUILDKITE_BUILD_NUMBER-custom-checkout.sh
 
 steps:
+
 # This first step builds the docker image that gets used by all subsequent steps.
 - label: ":wrench: Build Docker Image"
   key: "docker-build"
   commands:
 
   - echo "--- pipeline.xml commands BEGIN"
-
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+  - echo "--- temporarily skipping this step"; exit 0
+  - echo foooooooo
+# 
+# 
+# 
+# 
+# 
+# 
+# 
+# 
   # The "if FLOW_REPO" part is redundant when/if not using heroku...
   # - source $$CHECKOUT
   # - source $$CHECKOUT;if [[ $$FLOW_REPO ]]; then (
@@ -29,7 +47,7 @@ steps:
        echo "--- Handle PR";
        cd $FLOW_REPO && git fetch && git checkout $FLOW_HEAD_SHA;
      fi'
-
+ 
   # !!!
   - echo "+++ debug BEGIN"
 
@@ -53,17 +71,11 @@ steps:
 
   agents:
     docker: true
+
+  # label: ":wrench: Build Docker Image"
+
   plugins:
   - uber-workflow/run-without-clone:
-# - thedyrt/skip-checkout#v0.1.1: ~
-#   - sv-oss/github-pr-labels#v0.0.2:
-#       publish-env-var: PULL_REQUEST_LABELS
-
-#   - matrix-org/download#v1.1.0:
-#       urls:
-#         - https://raw.githubusercontent.com/StanfordAHA/garnet/aha-flow-no-heroku/TEMP/custom-checkout.sh
-#   - SpencerSharkey/hooks:
-#       precommand: $${BUILDKITE_DOWNLOADS_PATH}/custom-checkout.sh
   - improbable-eng/metahook:
 
       # This should run as pre-checkout, else risk not executing post-checkout hook from repo
@@ -88,6 +100,7 @@ steps:
           ls -l $$aha/.buildkite/hooks/post-checkout || echo no
           echo "+++ DEBUG DOCKER TRASH"
           docker images; docker ps
+          # docker kill deleteme_garnet_ci3927
 
       pre-exit: |
         pwd
@@ -112,12 +125,13 @@ steps:
   key: "goldcheck-amber"
   depends_on: "docker-build"
   commands:
-  - sleep 500; exit 0
-  - /aha/aha/bin/rtl-goldcheck.sh amber
+  - set -x; echo foooool; sleep 500; exit 0
+  - set -x; /aha/aha/bin/rtl-goldcheck.sh amber
   plugins:
     # - thedyrt/skip-checkout#v0.1.1: ~
     - docker#v3.2.0:
-        image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
+        # image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
+        image: garnet:latest
         volumes:
           - "/cad/:/cad"
           - "./temp:/buildkite:rw"
@@ -136,6 +150,8 @@ steps:
   key: "integration-tests"
   depends_on: "docker-build"
   commands:
+
+# TEST to see if failure canary works?
 
 #   # Disabled checkout so maybe .buildkite/hooks/post-checkout not guaranteed to exist
 #   # So must embed finctionality here instead :/
@@ -179,19 +195,14 @@ steps:
           date; pwd; ls -l .buildkite/hooks/post-checkout || echo no
           aha=/var/lib/buildkite-agent/builds/$$BUILDKITE_AGENT_NAME/stanford-aha/aha-flow
           ls -l $$aha/.buildkite/hooks/post-checkout || echo no
-          echo "+++ DEBUG DOCKER TRASH"
-          docker images; docker ps
-          docker kill deleteme_garnet_ci3927
+          # Already did this in prev step??
+          # echo "+++ DEBUG DOCKER TRASH"
+          # docker images; docker ps
+          # docker kill deleteme_garnet_ci3927
 
-#     - matrix-org/download#v1.1.0:
-#         urls:
-#           - https://raw.githubusercontent.com/StanfordAHA/garnet/aha-flow-no-heroku/TEMP/custom-checkout.sh
-#     - SpencerSharkey/hooks:
-#         precommand: $${BUILDKITE_DOWNLOADS_PATH}/custom-checkout.sh
-
-    # - thedyrt/skip-checkout#v0.1.1: ~
     - docker#v3.2.0:
-        image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
+        # image: garnet:$BUILDKITE_COMMIT$FLOW_REPO$FLOW_HEAD_SHA
+        image: garnet:latest
         volumes:
           - "/cad/:/cad"
           - "./temp:/buildkite:rw"
@@ -246,3 +257,20 @@ steps:
 #         ls -ld $$aha/temp || echo no
 #         ls -laR $$aha/temp || echo no
 
+# - thedyrt/skip-checkout#v0.1.1: ~
+#   - sv-oss/github-pr-labels#v0.0.2:
+#       publish-env-var: PULL_REQUEST_LABELS
+
+#   - matrix-org/download#v1.1.0:
+#       urls:
+#         - https://raw.githubusercontent.com/StanfordAHA/garnet/aha-flow-no-heroku/TEMP/custom-checkout.sh
+#   - SpencerSharkey/hooks:
+#       precommand: $${BUILDKITE_DOWNLOADS_PATH}/custom-checkout.sh
+
+#     - matrix-org/download#v1.1.0:
+#         urls:
+#           - https://raw.githubusercontent.com/StanfordAHA/garnet/aha-flow-no-heroku/TEMP/custom-checkout.sh
+#     - SpencerSharkey/hooks:
+#         precommand: $${BUILDKITE_DOWNLOADS_PATH}/custom-checkout.sh
+
+    # - thedyrt/skip-checkout#v0.1.1: ~
