--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -31,7 +31,7 @@ steps:
 # 
 # 
   - echo "+++ temporarily skipping this step"; set -x
-  - git pull stanfordaha/garnet:latest
+  - docker pull stanfordaha/garnet:latest
   - exit 0
   - echo foooooooo
 # 
@@ -95,34 +95,37 @@ steps:
       # FIXME maybe should not rely on repo hook for post-echkout, pre-exit!
       # "Preparing working directory" might clear out aha-flow maybe??
       pre-checkout: |
-        echo "+++ PRE CHECKOUT HOOK"
+        echo "+++ PRE CHECKOUT HOOK, BDI STEP"
 
-        echo "+++ where is custom-checkout?"; set -x
+        echo "+++ where is custom-checkout? pc1"; set -x
         cc_local=$$MYTMP/aha-flow-$BUILDKITE_BUILD_NUMBER-custom-checkout.sh
-        ls -l $cc_local || echo ERROR cannot find $cc_local
+        ls -l $$cc_local || echo ERROR cannot find $$cc_local
 
-        echo "Is /tmp reliable? And/or should curl from url?"
-        pwd; df $$MYTMP
+#         echo "Is /tmp reliable? And/or should curl from url?"
+#         pwd; df -h $$MYTMP
         echo ls -l $CHECKOUT; ls -l $CHECKOUT || echo no
         #
         echo source $CHECKOUT
         source $CHECKOUT
         # set -x; source .buildkite/hooks/post-checkout
 
-        echo "+++ where is custom-checkout?"; set -x
+        echo "+++ where is custom-checkout? pc2"; set -x
         cc_local=$$MYTMP/aha-flow-$BUILDKITE_BUILD_NUMBER-custom-checkout.sh
-        ls -l $cc_local || echo ERROR cannot find $cc_local
+        ls -l $$cc_local || echo ERROR cannot find $$cc_local
 
 
       pre-command: |
           set -x
-          echo "+++ DEBUG POST-CHECKOUT HOOK"
-          date; pwd; ls -l .buildkite/hooks/post-checkout || echo no
-          aha=/var/lib/buildkite-agent/builds/$$BUILDKITE_AGENT_NAME/stanford-aha/aha-flow
-          ls -l $$aha/.buildkite/hooks/post-checkout || echo no
-          echo "+++ DEBUG DOCKER TRASH"
+
+# local post-checkout working as of build 8583
+#           echo "+++ DEBUG POST-CHECKOUT HOOK"
+#           date; pwd; ls -l .buildkite/hooks/post-checkout || echo no
+#           aha=/var/lib/buildkite-agent/builds/$$BUILDKITE_AGENT_NAME/stanford-aha/aha-flow
+#           ls -l $$aha/.buildkite/hooks/post-checkout || echo no
+
+          echo "+++ DEBUG DOCKER TRASH DBI pre-comm"
           docker images; docker ps
-          # docker kill deleteme_garnet_ci3927
+          docker kill deleteme_garnet_ci4114 || echo okay
 
       pre-exit: |
         pwd
