consistent var name

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -99,7 +99,7 @@ steps:
         echo "+++ PRE CHECKOUT HOOK, BDI STEP"
 
         echo "+++ where is custom-checkout? pc1"; set -x
-        ls -l $$CHECKOUT || echo ERROR cannot find $$CHECKOUT
+        ls -l $CHECKOUT || echo ERROR cannot find $CHECKOUT
 
         #         echo "Is /tmp reliable? And/or should curl from url?"
         #         pwd; df -h $$MYTMP
@@ -110,7 +110,7 @@ steps:
         # set -x; source .buildkite/hooks/post-checkout
 
         echo "+++ where is custom-checkout? pc2"; set -x
-        ls -l $$CHECKOUT || echo ERROR cannot find $$CHECKOUT
+        ls -l $CHECKOUT || echo ERROR cannot find $CHECKOUT
 
 
       pre-command: |
