--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -149,7 +149,7 @@ steps:
   key: "goldcheck-amber"
   depends_on: "docker-build"
   commands:
-  - set -x; echo foooool; sleep 500; exit 0
+  - set -x; echo "+++ EARLY OUT foooool"; exit 0
   - set -x; /aha/aha/bin/rtl-goldcheck.sh amber
   plugins:
     # - thedyrt/skip-checkout#v0.1.1: ~
