--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -222,7 +222,11 @@ steps:
           # Want original post-checkout, pre-exit hooks available
           [ "$$BUILDKITE_BUILD_CHECKOUT_PATH" ] || exit 13 # big trouble if not exists
           mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
-          cp -rp $$MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
+          cp -rp $MYTMP/aha-flow/* $$BUILDKITE_BUILD_CHECKOUT_PATH
+          tmp=/var/lib/buildkite-agent/builds/tmp/$$BUILDKITE_AGENT_NAME
+          [ "$$tmp" == "$MYTMP" ] || exit 13
+
+
           ls -l $$BUILDKITE_BUILD_CHECKOUT_PATH || echo okay
           ls -l $$BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/hook* || echo okay
           aha=/var/lib/buildkite-agent/builds/$$BUILDKITE_AGENT_NAME/stanford-aha/aha-flow
